--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,8 @@
 {
   "crons": [
     {
-      "path": "/api/cron/autoCheckout",
-      "schedule": "15 1 * * *"
+      "path": "/api/refresh-mvs",
+      "schedule": "0 3 * * *"
     }
   ]
 }
